syntax = "proto3";
option java_multiple_files = true;
option java_outer_classname = "ClientServiceProto";
package com.pro.crawler.core.grpc;

// register client request
message ClientRegisterRequest {
  string messagePipeName = 1;
  string address = 2;
  int32 port = 3;
}
// heartbeat request
message ClientHeartBeatRequest {
  string address = 1;
  int32 port = 2;
}

// common response
message ClientResponse {
  string body = 1;
}


service ClientService {
  rpc register(ClientRegisterRequest) returns (ClientResponse);
  rpc heartbeat(ClientHeartBeatRequest) returns (ClientResponse);
}